Updating Spark to Java 11 and Jetty 11
Breaking changes by using Jakarta.

Added classgraph library as test dependency due to changes in
classloader in Java 9 and again in Java 11 to keep
StaticFilesFromArchiveTest test "as is".

Refactored WevSocket servlet context handler creation and it's tests.